--- a/static/css/stylesBase.css
+++ b/static/css/stylesBase.css
@@ -26,8 +26,11 @@ body {
 footer {
   background-color: #01152a;
   color: white;
-  padding: 20px;
+  padding: 10px;
   position: fixed;
   bottom: 0;
   width: 100%;
+  z-index: 1;
+  margin-top: auto;
 }
+
