--- a/erp/templates/html/base.html
+++ b/erp/templates/html/base.html
@@ -8,6 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Base{% endblock %}</title>
 
+    <link rel="icon" type="image/x-icon" href="{% static 'images/logopng.png' %}">
+
     <link rel="stylesheet" type="text/css" href="{% static 'css/stylesBase.css' %}">
     {% block module_styles %}{% endblock %}
 
@@ -18,7 +20,7 @@
     <!-- Navbar  -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-blue">
         <div class="container">
-            <a class="navbar-brand mr-auto" href="#">
+            <a class="navbar-brand mr-auto" href="{% url 'erp:menu' %}">
                 <img src="{% static 'images/logopng.png' %}" alt="" width="100" height="100">
             </a>
             <!-- button -->
@@ -37,11 +39,13 @@
 
     <!-- Fondo -->
     <div class="fondo">
-        {% block content %}{% endblock %}
+        <div class="content-container">
+          {% block content %}{% endblock %}
+        </div>
     </div>
 
     <!-- Pie de página -->
-    <footer class="text-center mt-5 ">
+    <footer class="text-center mt-5">
         <p>© 2023 Maritime Services SpA. Los derechos reservados por KodeThree.</p>
     </footer>
 
